Notebook: use additional CLI arguments

--- a/safety_checker.ipynb
+++ b/safety_checker.ipynb
@@ -107,6 +107,8 @@
         " --resize 256 \\\n",
         " --keep-ratio \\\n",
         " --output bad_concepts.json \\\n",
+        " --scores bad_concepts_scores.pth \\\n",
+        " --list img_list.json \\\n",
         " --verbose"
       ],
       "metadata": {
