Notebook: load additional outputs

--- a/safety_checker.ipynb
+++ b/safety_checker.ipynb
@@ -120,7 +120,11 @@
     {
       "cell_type": "code",
       "source": [
-        "results = load_json(\"bad_concepts.json\")"
+        "import torch\n",
+        "\n",
+        "paths = load_json(\"img_list.json\")\n",
+        "results = load_json(\"bad_concepts.json\")\n",
+        "scores = torch.load(\"bad_concepts_scores.pth\")"
       ],
       "metadata": {
         "id": "4UbsyiyJ_Nax"
@@ -167,7 +171,11 @@
     {
       "cell_type": "code",
       "source": [
-        "results = load_json(\"bad_concepts.json\")"
+        "import torch\n",
+        "\n",
+        "paths = load_json(\"img_list.json\")\n",
+        "results = load_json(\"bad_concepts.json\")\n",
+        "scores = torch.load(\"bad_concepts_scores.pth\")"
       ],
       "metadata": {
         "id": "2wsqT9ZEAuhg"
